--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/products.js"></script>
 	</head>
-	<body ng-controller="StoreController as store">
+  	<body ng-controller="StoreController as store">
     <!--  Store Header  -->
     <header>
       <h1 class="text-center">Flatlander Crafted Gems</h1>
-      <h2 class="text-center">- an Angular store -</h2>
+      <h2 class="text-center">– an Angular store –</h2>
     </header>
 
     <!--  Products Container  -->
